[gd_scene load_steps=4 format=3 uid="uid://dps0o7113t4u"]

[ext_resource type="Script" path="res://HUD/GameStart/start_sequence.gd" id="1_aa3y5"]
[ext_resource type="PackedScene" uid="uid://bkmv2huakex1t" path="res://HUD/GameStart/title_screen.tscn" id="2_myih2"]
[ext_resource type="PackedScene" uid="uid://dojiuhnlpuv4h" path="res://HUD/GameStart/mapping_screen.tscn" id="3_dr6dr"]

[node name="StartSequence" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aa3y5")

[node name="TitleScreen" parent="." instance=ExtResource("2_myih2")]
layout_mode = 1

[node name="MappingScreen" parent="." instance=ExtResource("3_dr6dr")]
layout_mode = 1

[connection signal="button_pressed" from="TitleScreen" to="." method="_on_title_screen_button_pressed"]
[connection signal="keys_mapped" from="MappingScreen" to="." method="_on_mapping_screen_keys_mapped"]
